[PECO-2008] Run benchmark tests on all purpose cluster (#517)
all purpose cluster flow added to benchmarking branch.