@@ -3,26 +3,26 @@ package com.databricks.jdbc.dbclient.impl.thrift;
 import static com.databricks.jdbc.TestConstants.*;
 import static com.databricks.jdbc.common.DatabricksJdbcConstants.CATALOG;
 import static com.databricks.jdbc.common.DatabricksJdbcConstants.SCHEMA;
+import static com.databricks.jdbc.common.MetadataResultConstants.*;
 import static com.databricks.jdbc.common.util.DatabricksThriftUtil.getNamespace;
 import static com.databricks.jdbc.dbclient.impl.common.CommandConstants.GET_TABLE_TYPE_STATEMENT_ID;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import com.databricks.jdbc.api.IDatabricksConnectionContext;
 import com.databricks.jdbc.api.IDatabricksSession;
 import com.databricks.jdbc.api.impl.*;
-import com.databricks.jdbc.common.CommandName;
 import com.databricks.jdbc.common.StatementType;
 import com.databricks.jdbc.exception.DatabricksSQLException;
 import com.databricks.jdbc.exception.DatabricksSQLFeatureNotImplementedException;
 import com.databricks.jdbc.model.client.thrift.generated.*;
 import com.databricks.jdbc.model.core.ExternalLink;
+import com.databricks.jdbc.model.core.ResultColumn;
 import com.databricks.sdk.service.sql.StatementState;
 import java.sql.SQLException;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Collections;
+import java.util.*;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
@@ -30,6 +30,8 @@ import org.mockito.junit.jupiter.MockitoExtension;
 
 @ExtendWith(MockitoExtension.class)
 public class DatabricksThriftServiceClientTest {
+
+  private static final String NEW_ACCESS_TOKEN = "new-access-token";
   @Mock DatabricksThriftAccessor thriftAccessor;
   @Mock IDatabricksSession session;
   @Mock TRowSet resultData;
@@ -52,8 +54,7 @@ public class DatabricksThriftServiceClientTest {
             .setSessionHandle(SESSION_HANDLE)
             .setServerProtocolVersion(TProtocolVersion.SPARK_CLI_SERVICE_PROTOCOL_V9)
             .setStatus(new TStatus().setStatusCode(TStatusCode.SUCCESS_STATUS));
-    when(thriftAccessor.getThriftResponse(openSessionReq, CommandName.OPEN_SESSION, null))
-        .thenReturn(openSessionResp);
+    when(thriftAccessor.getThriftResponse(openSessionReq)).thenReturn(openSessionResp);
     ImmutableSessionInfo actualResponse =
         client.createSession(CLUSTER_COMPUTE, CATALOG, SCHEMA, EMPTY_MAP);
     assertEquals(actualResponse.sessionHandle(), SESSION_HANDLE);
@@ -67,8 +68,7 @@ public class DatabricksThriftServiceClientTest {
     TCloseSessionReq closeSessionReq = new TCloseSessionReq().setSessionHandle(SESSION_HANDLE);
     TCloseSessionResp closeSessionResp =
         new TCloseSessionResp().setStatus(new TStatus().setStatusCode(TStatusCode.SUCCESS_STATUS));
-    when(thriftAccessor.getThriftResponse(closeSessionReq, CommandName.CLOSE_SESSION, null))
-        .thenReturn(closeSessionResp);
+    when(thriftAccessor.getThriftResponse(closeSessionReq)).thenReturn(closeSessionResp);
     assertDoesNotThrow(() -> client.deleteSession(session, CLUSTER_COMPUTE));
   }
 
@@ -83,6 +83,7 @@ public class DatabricksThriftServiceClientTest {
             .setStatement(TEST_STRING)
             .setSessionHandle(SESSION_HANDLE)
             .setCanReadArrowResult(true)
+            .setCanDecompressLZ4Result(true)
             .setCanDownloadResult(true);
     when(thriftAccessor.execute(executeStatementReq, null, session, StatementType.SQL))
         .thenReturn(resultSet);
@@ -115,8 +116,7 @@ public class DatabricksThriftServiceClientTest {
     TColumn tColumn = new TColumn();
     tColumn.setStringVal(new TStringColumn().setValues(Collections.singletonList(TEST_CATALOG)));
     when(resultData.getColumns()).thenReturn(Collections.singletonList(tColumn));
-    when(thriftAccessor.getThriftResponse(request, CommandName.LIST_CATALOGS, null))
-        .thenReturn(response);
+    when(thriftAccessor.getThriftResponse(request)).thenReturn(response);
     DatabricksResultSet resultSet = client.listCatalogs(session);
     assertEquals(resultSet.getStatementStatus().getState(), StatementState.SUCCEEDED);
   }
@@ -162,7 +162,7 @@ public class DatabricksThriftServiceClientTest {
         new DatabricksThriftServiceClient(thriftAccessor, connectionContext);
     DatabricksResultSet actualResult = client.listTableTypes(session);
     assertEquals(actualResult.getStatementStatus().getState(), StatementState.SUCCEEDED);
-    assertEquals(actualResult.statementId(), GET_TABLE_TYPE_STATEMENT_ID);
+    assertEquals(actualResult.getStatementId(), GET_TABLE_TYPE_STATEMENT_ID);
     assertEquals(((DatabricksResultSetMetaData) actualResult.getMetaData()).getTotalRows(), 3);
   }
 
@@ -178,8 +178,7 @@ public class DatabricksThriftServiceClientTest {
             .setResults(resultData)
             .setResultSetMetadata(resultMetadataData);
     when(resultData.getColumns()).thenReturn(Collections.emptyList());
-    when(thriftAccessor.getThriftResponse(request, CommandName.LIST_TYPE_INFO, null))
-        .thenReturn(response);
+    when(thriftAccessor.getThriftResponse(request)).thenReturn(response);
     DatabricksResultSet resultSet = client.listTypeInfo(session);
     assertEquals(resultSet.getStatementStatus().getState(), StatementState.SUCCEEDED);
   }
@@ -200,8 +199,7 @@ public class DatabricksThriftServiceClientTest {
             .setResults(resultData)
             .setResultSetMetadata(resultMetadataData);
     when(resultData.getColumns()).thenReturn(Collections.emptyList());
-    when(thriftAccessor.getThriftResponse(request, CommandName.LIST_SCHEMAS, null))
-        .thenReturn(response);
+    when(thriftAccessor.getThriftResponse(request)).thenReturn(response);
     DatabricksResultSet resultSet = client.listSchemas(session, TEST_CATALOG, TEST_SCHEMA);
     assertEquals(resultSet.getStatementStatus().getState(), StatementState.SUCCEEDED);
   }
@@ -224,9 +222,10 @@ public class DatabricksThriftServiceClientTest {
             .setStatus(new TStatus().setStatusCode(TStatusCode.SUCCESS_STATUS))
             .setResults(resultData)
             .setResultSetMetadata(resultMetadataData);
-    when(resultData.getColumns()).thenReturn(Collections.emptyList());
-    when(thriftAccessor.getThriftResponse(request, CommandName.LIST_TABLES, null))
-        .thenReturn(response);
+    TColumn tColumn = new TColumn();
+    tColumn.setStringVal(new TStringColumn().setValues(Collections.singletonList("")));
+    when(resultData.getColumns()).thenReturn(List.of(tColumn, tColumn, tColumn, tColumn));
+    when(thriftAccessor.getThriftResponse(request)).thenReturn(response);
     DatabricksResultSet resultSet =
         client.listTables(session, TEST_CATALOG, TEST_SCHEMA, TEST_TABLE, tableTypes);
     assertEquals(resultSet.getStatementStatus().getState(), StatementState.SUCCEEDED);
@@ -249,12 +248,20 @@ public class DatabricksThriftServiceClientTest {
             .setStatus(new TStatus().setStatusCode(TStatusCode.SUCCESS_STATUS))
             .setResults(resultData)
             .setResultSetMetadata(resultMetadataData);
-    when(resultData.getColumns()).thenReturn(Collections.emptyList());
-    when(thriftAccessor.getThriftResponse(request, CommandName.LIST_COLUMNS, null))
-        .thenReturn(response);
+    when(resultData.getColumns()).thenReturn(new ArrayList<>());
+    when(thriftAccessor.getThriftResponse(request)).thenReturn(response);
     DatabricksResultSet resultSet =
         client.listColumns(session, TEST_CATALOG, TEST_SCHEMA, TEST_TABLE, TEST_STRING);
     assertEquals(resultSet.getStatementStatus().getState(), StatementState.SUCCEEDED);
+    DatabricksResultSetMetaData metaData = (DatabricksResultSetMetaData) resultSet.getMetaData();
+    assertEquals(metaData.getColumnCount(), COLUMN_COLUMNS.size());
+    for (int i = 0; i < COLUMN_COLUMNS.size(); i++) {
+      ResultColumn resultColumn = COLUMN_COLUMNS.get(i);
+      assertEquals(metaData.getColumnName(i + 1), resultColumn.getColumnName());
+      assertEquals(metaData.getColumnType(i + 1), resultColumn.getColumnTypeInt());
+      assertEquals(metaData.getColumnTypeName(i + 1), resultColumn.getColumnTypeString());
+      assertEquals(metaData.getPrecision(i + 1), resultColumn.getColumnPrecision());
+    }
   }
 
   @Test
@@ -274,8 +281,7 @@ public class DatabricksThriftServiceClientTest {
             .setResults(resultData)
             .setResultSetMetadata(resultMetadataData);
     when(resultData.getColumns()).thenReturn(null);
-    when(thriftAccessor.getThriftResponse(request, CommandName.LIST_FUNCTIONS, null))
-        .thenReturn(response);
+    when(thriftAccessor.getThriftResponse(request)).thenReturn(response);
     DatabricksResultSet resultSet =
         client.listFunctions(session, TEST_CATALOG, TEST_SCHEMA, TEST_STRING);
     assertEquals(resultSet.getStatementStatus().getState(), StatementState.SUCCEEDED);
@@ -298,8 +304,7 @@ public class DatabricksThriftServiceClientTest {
             .setResults(resultData)
             .setResultSetMetadata(resultMetadataData);
     when(resultData.getColumns()).thenReturn(null);
-    when(thriftAccessor.getThriftResponse(request, CommandName.LIST_PRIMARY_KEYS, null))
-        .thenReturn(response);
+    when(thriftAccessor.getThriftResponse(request)).thenReturn(response);
     DatabricksResultSet resultSet =
         client.listPrimaryKeys(session, TEST_CATALOG, TEST_SCHEMA, TEST_TABLE);
     assertEquals(resultSet.getStatementStatus().getState(), StatementState.SUCCEEDED);
@@ -321,5 +326,13 @@ public class DatabricksThriftServiceClientTest {
     DatabricksThriftServiceClient client =
         new DatabricksThriftServiceClient(thriftAccessor, connectionContext);
     assertEquals(client.getConnectionContext(), connectionContext);
+  }
+
+  @Test
+  void testResetAccessToken() throws Exception {
+    DatabricksThriftServiceClient client =
+        new DatabricksThriftServiceClient(thriftAccessor, connectionContext);
+    client.resetAccessToken(NEW_ACCESS_TOKEN);
+    verify(thriftAccessor).resetAccessToken(NEW_ACCESS_TOKEN);
   }
 }
